package Entidades;

public class Disciplina {
    private String nombre;

    public Disciplina(String nombre) {
        this.nombre = nombre;


    }
    public String getNombre() {
        return nombre;
    }

}
